--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,8 @@
 ---
 pagination:
-  data: collections.posts
-  size: 3
-  alias: posts
+  data: site.events
+  size: 6
+  alias: events
 ---
 <html>
   <head>
@@ -37,13 +37,17 @@ pagination:
         <div class="column-body">
           <span class="title">CONNECT</span>
           <hr />
-          {% for event in site.events %}
-          <p class="event">
-            <b>{{ event.name }}</b
-            ><br />
-            {{ event.when }}
-          </p>
-          {% endfor %}
+          {% for event in events %} {% if event.link %}
+          <a href="{{ event.link }}">
+            {% endif %}
+            <p class="event">
+              <b>{{ event.name }}</b
+              ><br />
+              {{ event.when }}
+            </p>
+            {% if event.link %}
+          </a>
+          {% endif %} {% endfor %}
           <div class="column-footer"></div>
           <span class="title">CONTESTS</span>
           <hr />
@@ -68,7 +72,7 @@ pagination:
         <div class="column-body">
           <span class="title">BLOGZ</span>
           <hr />
-          {% for post in posts %}
+          {% for post in collections.posts %}
           <a href="{{ post.url }}">
             <p class="event">
               <b>{{ post.data.title }}</b
@@ -84,8 +88,20 @@ pagination:
         <div class="column-body">
           <span class="title">PARTNERZ</span>
           <hr />
-          <a href="https://dec0de.xyz"><img class="partner-logo" src="https://portal.dec0de.xyz/assets/img/logo.png"><img class="partner-logo-dark" src="https://imagedelivery.net/2XOKk6tqcY0Sf5Iqe-LStg/911288f0-896f-4b65-15c9-973ab796c700/public"></a>
-          <a href="https://cloud-fortress.com"><img class="partner-logo" src="https://imagedelivery.net/2XOKk6tqcY0Sf5Iqe-LStg/720d4a7c-c1e9-4c1c-adc3-4e52b86cf000/public" /><img class="partner-logo-dark" src="https://imagedelivery.net/2XOKk6tqcY0Sf5Iqe-LStg/c5515bd5-ddcb-466f-aa49-fa61e1592200/public" /></a>
+          <a href="https://dec0de.xyz"
+            ><img
+              class="partner-logo"
+              src="https://portal.dec0de.xyz/assets/img/logo.png" /><img
+              class="partner-logo-dark"
+              src="https://imagedelivery.net/2XOKk6tqcY0Sf5Iqe-LStg/911288f0-896f-4b65-15c9-973ab796c700/public"
+          /></a>
+          <a href="https://cloud-fortress.com"
+            ><img
+              class="partner-logo"
+              src="https://imagedelivery.net/2XOKk6tqcY0Sf5Iqe-LStg/720d4a7c-c1e9-4c1c-adc3-4e52b86cf000/public" /><img
+              class="partner-logo-dark"
+              src="https://imagedelivery.net/2XOKk6tqcY0Sf5Iqe-LStg/c5515bd5-ddcb-466f-aa49-fa61e1592200/public"
+          /></a>
           <div class="column-footer"></div>
           <iframe
             src="https://discord.com/widget?id=798707539067011104&theme=dark"
